# LETscore_public

./: README.md
LETscore_source/: CMakeLists.txt  LETscore.cc  init_vis.mac
LETscore_source/include/: MyActionInitialization.hh  MyAnalysis.hh  MyDetectorConstruction.hh  MyEventAction.hh  MyHist.hh  MyHit.hh  MyLetCalc.hh  MyMatrix.hh  MyPrimaryGeneratorAction.hh  MyRunAction.hh  MySensitiveDetector.hh  MySteppingAction.hh  MyStruct.hh
LETscore_source/scripts/: mono.mac  pencil.mac  point.mac
LETscore_source/src/: MyActionInitialization.cc  MyDetectorConstruction.cc  MyEventAction.cc  MyHist.cc  MyHit.cc  MyLetCalc.cc  MyMatrix.cc  MyPrimaryGeneratorAction.cc  MyRunAction.cc  MySensitiveDetector.cc  MySteppingAction.cc
